{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 1349,
  "lineage": "eb879374-cfb5-7601-c121-c8c4bbd259f3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet",
            "name": "mainSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RestoProchRG",
            "virtual_network_name": "mainVNet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "da5ad746-de57-457d-b947-c46351b21a77",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet",
            "location": "westeurope",
            "name": "mainVNet",
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/backendNIC1",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/backendPublicIP1",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "backendNIC1",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.backend.azurerm_public_ip.backend_ip1"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/backendNIC2",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/backendPublicIP2",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "backendNIC2",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.backend.azurerm_public_ip.backend_ip2"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkSecurityGroups/backendNSG",
            "location": "westeurope",
            "name": "backendNSG",
            "resource_group_name": "RestoProchRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "backend_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/backendPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.223",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "backendPublicIP1",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "backend_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/backendPublicIP2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.159",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "backendPublicIP2",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.bdd",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bdd_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/bddNIC1",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/bddPublicIP1",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "bddNIC1",
            "private_ip_address": "10.0.1.7",
            "private_ip_addresses": [
              "10.0.1.7"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.bdd.azurerm_public_ip.bdd_ip1"
          ]
        }
      ]
    },
    {
      "module": "module.bdd",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bdd_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkSecurityGroups/bddNSG",
            "location": "westeurope",
            "name": "bddNSG",
            "resource_group_name": "RestoProchRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.bdd",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bdd_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/bddPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.191",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "bddPublicIP1",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "frontend_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/frontendNIC1",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/frontendPublicIP1",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "frontendNIC1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.frontend.azurerm_public_ip.frontend_ip1"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "frontend_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/frontendNIC2",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/frontendPublicIP2",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "frontendNIC2",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.frontend.azurerm_public_ip.frontend_ip2"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "frontend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkSecurityGroups/frontendNSG",
            "location": "westeurope",
            "name": "frontendNSG",
            "resource_group_name": "RestoProchRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/frontendPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.151",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "frontendPublicIP1",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/frontendPublicIP2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.204",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "frontendPublicIP2",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lb_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/lbNIC1",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/lbPublicIP1",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "lbNIC1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.load_balancer.azurerm_public_ip.lb_ip1"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lb_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/lbNIC2",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/lbPublicIP2",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "lbNIC2",
            "private_ip_address": "10.0.1.9",
            "private_ip_addresses": [
              "10.0.1.9"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.load_balancer.azurerm_public_ip.lb_ip2"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lb_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkSecurityGroups/lbNSG",
            "location": "westeurope",
            "name": "lbNSG",
            "resource_group_name": "RestoProchRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/lbPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.210",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "lbPublicIP1",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/lbPublicIP2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.217",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "lbPublicIP2",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.supervision",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "supervision_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/supervisionNIC1",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/supervisionPublicIP1",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "supervisionNIC1",
            "private_ip_address": "10.0.1.8",
            "private_ip_addresses": [
              "10.0.1.8"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.supervision.azurerm_public_ip.supervision_ip1"
          ]
        }
      ]
    },
    {
      "module": "module.supervision",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "supervision_nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkInterfaces/supervisionNIC2",
            "internal_domain_name_suffix": "i1lvvwsx1z4ulokhyrrvdmq0oh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/supervisionPublicIP2",
                "subnet_id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/virtualNetworks/mainVNet/subnets/mainSubnet"
              }
            ],
            "location": "westeurope",
            "name": "supervisionNIC2",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "RestoProchRG"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "module.supervision.azurerm_public_ip.supervision_ip2"
          ]
        }
      ]
    },
    {
      "module": "module.supervision",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "supervision_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/networkSecurityGroups/supervisionNSG",
            "location": "westeurope",
            "name": "supervisionNSG",
            "resource_group_name": "RestoProchRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.supervision",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "supervision_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/supervisionPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.235",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "supervisionPublicIP1",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.supervision",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "supervision_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2bd9dec8-42f5-499f-bf2d-07641089bbd7/resourceGroups/RestoProchRG/providers/Microsoft.Network/publicIPAddresses/supervisionPublicIP2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.160.189.226",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "supervisionPublicIP2",
            "resource_group_name": "RestoProchRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}